# thug-beginners

./: README.md  thug-beginners.cabal
lessonA/: A1Nat.hs  A2List.hs  A3BreadButter.hs  Tests.hs
lessonB/: B1Monoid.hs  B2Functor.hs  B3Monad.hs  B4FoldTraverse.hs  Tests.hs
solutions/: A1Nat.hs  A2List.hs  A3BreadButter.hs
