name:                  THUG-Beginners
version:               0.1.0
synopsis:              THUG Beginners' Workshoppe exercises.
description:           Exercises for the Trondheim Haskell Users' Group's
                       beginners' workshoppe.
license:               GPL-3
license-file:          LICENSE
author:                Alexander Berntsen
maintainer:            alexander@plaimi.net
copyright:             (c) Alexander Berntsen 2015
category:              Educational
build-type:            Simple
cabal-version:         >=1.10

executable a
  main-is:             Tests.hs
  exposed-modules:     A1Nat
                       A2List
                       A3BreadButter
  build-depends:       base >=4.8 && <4.9,
                       hspec >=2.1 && <2.3,
                       QuickCheck >=2.6 && <2.9,
                       random
  hs-source-dirs:      lessonA
  default-language:    Haskell2010

executable b
  main-is:             Tests.hs
  exposed-modules:     B1Monoid
                       B2Functor
                       B3Monad
                       B4FoldTraverse
  build-depends:       base >=4.8 && <4.9,
                       hspec >=2.1 && <2.3,
                       QuickCheck >=2.6 && <2.9,
                       random
  hs-source-dirs:      lessonB
  default-language:    Haskell2010
